# BasicComponent

./: .gclient  .gclient_entries  .gitignore  .gn  BasicComponent.pri  BasicComponent.pro  BasicComponentTest.pro  DEPS  Test.pro  readme.md
EventBus/: Event.hpp  EventBus.cpp  EventBus.hpp  EventHandler.hpp
app/: app.pro  main.cpp  widget.cpp  widget.h  widget.ui
crypt/: curve25519.h  pkcs7_padding.c
src/: BUILD.gn  BasicComponent.pri  BasicComponent.pro  SafeContainer.pro  main.cpp
src/assert/: __assert.c
src/container/: raii.h
src/crypt/: curve25519.h  ibase64.cc  ibase64.h  pkcs7_padding.c
src/include/: RWLock.cpp  RWLock.h  threadsafe_unordered_map.h
src/json/: DataParseUtil.cc  DataParseUtil.h
src/platform/windows/SocketSelect/: socketselect2.cc
src/platform/windows/thread/: condition.h
src/thread/: ThreadPool.h  thread_types.cc  thread_types.h
src/timer/: Timer.h
src/utils/: rtccore_time_utils.cc  rtccore_time_utils.h  strutil.cc
src/xlogger/: android_xlog.h  xlogger.cc  xlogger.h  xlogger_category.cc  xloggerbase.c  xloggerbase.h
thread/: ThreadPool.h  event.cc  event.h  function_view.h  pending_task_safety_flag.cc  pending_task_safety_flag.h  task_queue_base.cc  task_queue_base.h  thread.cc  thread.h  thread_event.cc  thread_event.h  thread_types.h
timer/: TaskTimer.cc  TaskTimer.h  Timer.cc  Timer.cpp  Timer.h
utils/: strutil.cc  strutil.h  time_utils.cc  time_utils.h
